# ScanKing

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat
core/: Cargo.toml
core/src/: detect.rs  filters.rs  geometry.rs  idcard.rs  lib.rs  ocr.rs  pdf.rs  store.rs
core/tests/: ocr_e2e.rs  pipeline.rs
docs/: 开发指南.md  美术规范.md  避坑手册.md  项目记忆.md
scripts/: build_apk.ps1  fetch_models.ps1  fetch_models.sh  ocr_test.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  lib.rs  main.rs
ui/: app.js  index.html  style.css
