[package]
name = "scanking-core"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
kamadak-exif = "0.6"
anyhow = "1"
rayon = "1"
tract-onnx = { version = "0.21", optional = true }

[features]
default = ["ocr"]
ocr = ["dep:tract-onnx"]
