[package]
name = "scanking"
version = "0.1.0"
edition = "2021"
description = "扫描王 ScanKing - 免费无广告的文档扫描 App"

[lib]
name = "scanking_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
scanking-core = { path = "../core", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[features]
default = ["ocr"]
ocr = ["scanking-core/ocr"]
